# pgmcp

./: .gitignore  .pip-audit-ignore.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES  docker-compose.yml  pyproject.toml  server.py
.github/: copilot-instructions.md
.github/workflows/: pip-audit.yml  test.yml
docker/: init.sql
prompt_log/: 20251204_1.md
scripts/: pip_audit_gate.py
src/pgmcp/: __init__.py  connection.py  server.py
src/pgmcp/tools/: __init__.py  er_diagram.py  foreign_keys.py  indexes.py  schema.py
tests/: test_integration.py  test_server.py
tests/integration/: conftest.py  test_connection.py
tests/integration/tools/: test_er_diagram.py  test_foreign_keys.py  test_indexes.py  test_schema.py
tests/unit/: test_pip_audit_gate.py
tests/unit/tools/: test_er_diagram.py  test_foreign_keys.py  test_indexes.py  test_schema.py
