[project]
name = "pgmcp"
version = "0.1.0"
description = "PostgreSQL MCP Server - テーブル一覧とスキーマ情報を提供するMCPサーバー"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kyagoshi" }
]
keywords = ["mcp", "postgresql", "database", "schema"]

dependencies = [
    "fastmcp>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
pgmcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
